--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "log4js": "^6.9.1",
     "method-override": "~2.1.2",
     "morgan": "~1.2.2",
+    "negotiator": "^0.6.3",
     "zerorpc": "^0.9.8"
   }
 }
